--- a/index.html
+++ b/index.html
@@ -98,9 +98,9 @@
     </main>
         <section>
             <h2>Need some side dishes?</h2>
-            <div>
+            <div id="mexican">
             <h3>Mexican Rice</h3>
-<img src="images/mexican-rice.png" alt="">
+<img src="images/mexican-rice.png" alt="Image of orange and fluffy Mexican rice">
             <p>Traditional recipe with a twist.</p>
 <h4>Rating<span class="hidden">4 of 5 Stars</span></h4>
    <div class="stars"><!--stars-->
@@ -126,9 +126,9 @@
     </svg>
                 </div>
             </div>
-            <div>
+            <div id="salsa">
             <h3>Salsa</h3>
-<img src="images/salsa.png" alt="">
+<img src="images/salsa.png" alt="image of salsa on a board next to bread and chips">
             <p>Just the right amount of spice.</p>
 <h4>Rating<span class="hidden">5 of 5 Stars</span></h4>      <div class="stars"><!--stars-->
     <svg xmlns="http://www.w3.org/2000/svg" class="star-fill" width="20" height="20" viewBox="0 0 24 24" stroke-width="1.5" stroke="#ffffff" fill="#ffffff" stroke-linecap="round" stroke-linejoin="round">
@@ -153,9 +153,9 @@
     </svg>
                 </div>
             </div>
-            <div>
+            <div id="guac">
             <h3>Guacamole</h3>
-<img src="images/guacamole.png" alt="">
+<img src="images/guacamole.png" alt="image of guacamole in a white bowl">
             <p>Fresh and healthy.</p>
                 <h4>Rating<span class="hidden">4 of 5 Stars</span></h4>
     <div class="stars"><!--stars-->
@@ -181,9 +181,9 @@
     </svg>
             </div>
             </div>
-            <div>
+            <div id="tortillas">
             <h3>Tortillas</h3>
-<img src="images/tortillas.png">
+<img src="images/tortillas.png" alt="image of warm freshly made and toasted tortillas">
             <p>Easy to make and so good.</p>
 <h4>Rating<span class="hidden">4 of 5 Stars</span></h4>
     <div class="stars"><!--stars-->
@@ -297,7 +297,7 @@
         <div>
             <h4 class="hidden">Good Eats</h4>
             <p>Copyright 2022<br>Taco Cheesington</p>
-            <img src="images/taco-cheesington.png" alt="">
+            <img src="images/taco-cheesington.png" alt="image of chef sprinkling toppings on a dish">
         </div>
     </footer>
 </body>
